--- a/ral/Cargo.toml
+++ b/ral/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+colored = "2.1.0"
+indicatif = "0.17.8"
+reqwest = { version = "0.12.8", features = ["blocking"] }
+serde = { version = "1.0.213", features = ["derive"] }
+serde_json = "1.0.132"
+zip = "2.2.0"
